syntax = "proto3";

package vcbpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/vcbpb";

import "mir/plugin.proto";

message Event {
  oneof type {
    option (mir.event_type) = true;
    BroadcastRequest request = 1;
    Deliver          deliver = 2;
  }
}

message BroadcastRequest {
  bytes data = 1;
}

message Deliver {
  bytes data = 1;
  bytes signature = 2;
}

message Message {
  oneof type {
    SendMessage  send_message = 1;
    EchoMessage  echo_message  = 2;
    FinalMessage final_message = 3;
  }
}

message SendMessage {
  bytes data = 1;
}

message EchoMessage {
  bytes signature_share = 1;
}

message FinalMessage {
  bytes data = 1;
  bytes signature = 2;
}
